[gd_scene load_steps=11 format=3 uid="uid://ccdbvsvcd6ava"]

[ext_resource type="Script" uid="uid://dpbsp5j54opei" path="res://Scenes/game.gd" id="1_3dryh"]
[ext_resource type="Texture2D" uid="uid://4bwoj03webqv" path="res://Assets/images/TEST_image.png" id="1_ebmjs"]
[ext_resource type="PackedScene" uid="uid://bwkcdxjc181vd" path="res://Scenes/incoming_news.tscn" id="2_qxrlw"]
[ext_resource type="Theme" uid="uid://d08ry3kmkbtce" path="res://Assets/Themes/Buttons_Game.tres" id="4_wowpa"]
[ext_resource type="PackedScene" uid="uid://bi8n5noow0084" path="res://Scenes/calling_someone.tscn" id="5_wowpa"]
[ext_resource type="PackedScene" uid="uid://eqoxgferdc40" path="res://Scenes/internet.tscn" id="6_i6g32"]
[ext_resource type="PackedScene" uid="uid://bggrq4msf8afc" path="res://Scenes/Stamp_approve.tscn" id="7_1l0tm"]
[ext_resource type="Script" uid="uid://mn3r057gyx1r" path="res://Scenes/paper_simple.gd" id="8_h4fw4"]
[ext_resource type="Texture2D" uid="uid://dr4y7sl7qxejj" path="res://Assets/images/1-04851-00_BL_Notebook_Paper_Punch_G.jpg" id="8_v158k"]
[ext_resource type="PackedScene" uid="uid://6ny0ityyprpo" path="res://Scenes/Stamp_decline.tscn" id="10_ldgsr"]

[node name="Game" type="Node2D"]
script = ExtResource("1_3dryh")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ebmjs")

[node name="write_news" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -322.0
offset_top = 299.0
offset_right = 216.0
offset_bottom = 469.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.08, 1)
theme = ExtResource("4_wowpa")
text = "What to write today?"

[node name="call_someone" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -663.0
offset_top = 230.0
offset_right = -457.0
offset_bottom = 349.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.08, 1)
theme = ExtResource("4_wowpa")
text = "Call someone"

[node name="check_internet" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -87.0
offset_right = 153.0
offset_bottom = 122.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.08, 1)
theme = ExtResource("4_wowpa")
text = "Check the internet"

[node name="incoming_news" parent="." instance=ExtResource("2_qxrlw")]
unique_name_in_owner = true
visible = false

[node name="calling_someone" parent="." instance=ExtResource("5_wowpa")]
unique_name_in_owner = true
visible = false

[node name="internet" parent="." instance=ExtResource("6_i6g32")]
unique_name_in_owner = true
visible = false

[node name="exit_game" type="Button" parent="."]
offset_left = 636.0
offset_top = -488.0
offset_right = 902.0
offset_bottom = -412.0
text = "EXIT"

[node name="paper_simple" type="Sprite2D" parent="."]
texture = ExtResource("8_v158k")
script = ExtResource("8_h4fw4")

[node name="Button" type="Button" parent="paper_simple"]
self_modulate = Color(1, 1, 1, 0.0392157)
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.001
anchor_right = 0.988
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -367.735
offset_right = -299.8
offset_bottom = -367.0

[node name="stamp_approved" parent="." instance=ExtResource("7_1l0tm")]
position = Vector2(565, -273)

[node name="stamp_decline" parent="." instance=ExtResource("10_ldgsr")]
position = Vector2(754, -276)

[connection signal="pressed" from="write_news" to="." method="_on_write_news_pressed"]
[connection signal="pressed" from="call_someone" to="." method="_on_call_someone_pressed"]
[connection signal="pressed" from="check_internet" to="." method="_on_check_internet_pressed"]
[connection signal="pressed" from="exit_game" to="." method="_on_exit_pressed"]
[connection signal="button_down" from="paper_simple/Button" to="paper_simple" method="_on_button_button_down"]
[connection signal="stamping" from="stamp_approved" to="." method="_on_stamp_approved_stamping"]
[connection signal="stamping" from="stamp_approved" to="paper_simple" method="_on_stamp_approved_stamping"]
[connection signal="stamping" from="stamp_decline" to="paper_simple" method="_on_stamp_decline_stamping"]
